--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,68 @@ html {
 
 body {
   box-sizing: border-box; }
+
+.header__heading {
+  font-size: 6rem; }
+
+.footer__copy {
+  color: white;
+  font-size: 1.8rem; }
+
+.clock {
+  background: grey;
+  border-radius: 50%;
+  height: 40rem;
+  width: 40rem;
+  margin: 0 auto;
+  padding: 2rem; }
+  .clock__face {
+    background: center/90% no-repeat url("../img/clock.svg") #fff;
+    border-radius: 50%;
+    height: 100%;
+    position: relative;
+    width: 100%; }
+  .clock__center {
+    background: black;
+    border-radius: 50%;
+    height: 2rem;
+    left: 17rem;
+    position: absolute;
+    top: 17rem;
+    width: 2rem; }
+
+.hand {
+  width: 28rem;
+  height: .2rem;
+  position: absolute; }
+  .hand--hour {
+    background: black;
+    height: 1rem;
+    left: 4rem;
+    top: 17.5rem;
+    width: 14rem; }
+  .hand--minute {
+    background: black;
+    height: .6rem;
+    left: 1.4rem;
+    top: 17.6rem;
+    width: 16.5rem; }
+  .hand--second {
+    background: red;
+    height: .2rem;
+    left: 1.4rem;
+    top: 17.8rem;
+    width: 16.5rem; }
+
+.footer {
+  background: top #615235 url("../img/background-cloth.png") repeat-x;
+  padding: 4rem;
+  text-align: center; }
+
+.header {
+  background: center #e2cda5 url("../img/background-paper.png") repeat-x;
+  padding: 4rem;
+  text-align: center; }
+
+.section {
+  padding: 4rem 0; }
