--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -1,6 +1,8 @@
 .header {
     &__heading {
+        color: saddlebrown;
         font-size: 6rem; 
+        text-shadow: 1px 1px 2px black; 
     }
 }
 
