--- a/sass/components/clock.scss
+++ b/sass/components/clock.scss
@@ -1,6 +1,8 @@
 .clock {
     background: grey;
+    border: 5px solid #555;
     border-radius: 50%;
+    box-shadow: 5px 5px 30px black;    
     height: 40rem; 
     width: 40rem;
     margin: 0 auto; 
@@ -8,6 +10,7 @@
 
     &__face {
         background: center/90% no-repeat url('../img/clock.svg') #fff; 
+        border: 1px solid #333;
         border-radius: 50%;
         height: 100%;
         position: relative;
