--- a/sass/components/hand.scss
+++ b/sass/components/hand.scss
@@ -2,6 +2,10 @@
     width: 28rem; 
     height: .2rem; 
     position: absolute;
+    transform-origin: 100%;
+    transform: rotate(90deg); 
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.03, 1.09, 0.88, 1.46);
 
     &--hour {
         background: black;
